# goit-pythonweb-hw-012

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt  test.db
docs/: conf.py  index.rst
migrations/versions/: 699c29c87ddb_update_models.py  719dd8ac0e12_init.py  b37d62bc1065_add_user.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py  redis.py
src/repository/: contacts.py  users.py
src/schemas/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
src/services/templates/: password_reset.html
tests/: conftest.py  test_integration_auth.py  test_integration_contacts.py  test_unit_repository_contacts.py
